objects/Sales_Request__c.object
<CustomObject>
    <fields>
        <fullName>Further_Information__c</fullName>
        <label>Further Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>List_of_Third_Party_Connections__c</fullName>
        <label>List of Third Party Connections</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Channels__c</fullName>
        <label>Number of Channels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <label>Number of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Opportunity Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Description__c</fullName>
        <label>Opportunity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Opportunity_Id__c</formula>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_of_Business__c</fullName>
        <formula>TEXT(Opportunity__r.Line_of_Business__c)</formula>
        <label>Opportunity Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; Opportunity__r.Id</formula>
        <label>Opportunity Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.Full_Name__c</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Group__c</fullName>
        <formula>TEXT(Opportunity__r.Product_Group__c)</formula>
        <label>Opportunity Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Requests</relationshipLabel>
        <relationshipName>Sales_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Size_of_Current_Database_GB__c</fullName>
        <label>Size of Current Database (GB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Years__c</fullName>
        <label>Term (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Request</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Sales Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Requests</pluralLabel>
    <recordTypes>
        <fullName>Managed_Service</fullName>
        <active>true</active>
        <description>Managed Service Request</description>
        <label>Managed Service</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>